--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --main-background-color: #fafafa;
+  --post-card-background-color: #fafafa;
+  --border-color: grey;
+  --attention-color: red;
+}
+
+body {
+  background: var(--main-background-color);
+}
+
