--- a/src/app/common-ui/post-card/post-card.component.html
+++ b/src/app/common-ui/post-card/post-card.component.html
@@ -3,11 +3,13 @@
     <img src="/assets/images/post-image.jpg" alt="">
     <div class="post-tag"> Тег поста</div>
   </div>
-  <div class="post-title">
-    <strong>Назване поста</strong>
+  <div class="padding_10px">
+    <div class="post-title">
+      <strong>Назване поста</strong>
+    </div>
+    <div class="post-description">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, autem corporis dolores, earum eius eveniet excepturi hic inventore iste itaque odio perspiciatis provident quam quas ratione totam ullam voluptatibus.
+    </div>
+    <div class="post-read-more">Читать далее =></div>
   </div>
-  <div class="post-description">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, autem corporis dolores, earum eius eveniet excepturi hic inventore iste itaque odio perspiciatis provident quam quas ratione totam ullam voluptatibus.
-  </div>
-  <div class="post-read-more">Читать далее =></div>
 </div>
