--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
-<main class="main">
-  <div class="content">
-    <div class="left-side">
-      <h1>Hello, {{ myName }}</h1>
-      <app-post-card />
-      <app-post-card />
 
-    </div>
-  </div>
-</main>
+<app-header />
+<app-main />
+<app-footer />
+<div>
 
-<router-outlet />
+  <router-outlet />
+</div>
+
