--- a/src/app/common-ui/post-card/post-card.component.scss
+++ b/src/app/common-ui/post-card/post-card.component.scss
@@ -1,20 +1,33 @@
+:host {
 
+}
 .post-card {
-  border: 1px solid var(--border-color);
-  padding: 2em 1.5em;
+  //border: 1px solid var(--border-color);
+  box-shadow: 0px 0px 5px var(--border-shodow-color);
+
+  margin: 1em;
+  max-width: 500px;
   display: grid;
-  grid-template-columns: repeat(1, minmax(300px, 1fr));
+  //grid-template-columns: repeat(1, minmax(250px, 1fr));
   grid-gap: 1em;
 
 }
 
+.padding_10px {
+  padding: 10px;
+}
+
 .post-image {
   position: relative;
+  padding: 10px;
+
 }
 
 img {
   width: 100%;
   height: auto;
+
+
 }
 
 .post-tag {
