--- a/src/app/header-ui/header/header.component.html
+++ b/src/app/header-ui/header/header.component.html
@@ -5,7 +5,7 @@
 <header>
   <div class="middle-header">
     <img src='/assets/images/logo/techsro_full_logo.png' alt="contact">
-    <app-button />
+    <p-button label="Зарегистрироваться" />
   </div>
   <div class="bottom-header">
     <p>ГЛАВНАЯ</p>
